# CppCodeAnalyzer

./: .gitignore  .travis.yml  Doxyfile  Makefile  README.md  build.sh  build_directories.sh  build_tools.sh  clean.sh  tests.sh
ci/: build_ogdf.sh
src/: CMakeLists.txt  Makefile  dependencygraph.cpp  dependencygraph.hpp  file.cpp  file.hpp  graphconstructor.cpp  graphconstructor.hpp  line.cpp  line.hpp  main.cpp  stringhelper.cpp  stringhelper.hpp
src/analyzer/: analyzerfactory.cpp  analyzerfactory.hpp  crtp_analyzer.hpp  ianalyzer.cpp  ianalyzer.hpp  redondantheaderanalyzer.cpp  redondantheaderanalyzer.hpp
src/file/: crtp_file.hpp  externalfile.cpp  externalfile.hpp  filefactory.cpp  filefactory.hpp  ifile.cpp  ifile.hpp  modifiablefile.cpp  modifiablefile.hpp
src/modifier/: crtp_modifier.hpp  headersorter.cpp  headersorter.hpp  imodifier.cpp  imodifier.hpp
src/ogdf/: boostgraph2ogdfconverter.cpp  boostgraph2ogdfconverter.hpp
src/packagedependency/: packagedependencybuilder.cpp  packagedependencybuilder.hpp  packagedependencygraph.hpp
src/utils/: abstractfactory.hpp  algorithms.hpp  comparator.hpp  comparatorbymethodvalue.hpp  defaultfactoryerrorpolicy.hpp  exception.cpp  exception.hpp  genericgraph.hpp  singleton.hpp  stringhelper.cpp  stringhelper.hpp  utils.hpp
tests/: CMakeLists.txt  main.cpp  testanalyzerfactory.cpp  testanalyzerfactory.hpp  testdependencygraph.cpp  testdependencygraph.hpp  testfile.cpp  testfile.hpp  testgraphconstructor.cpp  testgraphconstructor.hpp  testheadersorter.cpp  testheadersorter.hpp  testpackagedependencybuilder.cpp  testredondantheaderanalyzer.cpp  testredondantheaderanalyzer.hpp  teststringhelper.cpp  teststringhelper.hpp  utils_tests.cpp  utils_tests.hpp
tools/lcovhtmlcleaner/: CMakeLists.txt  main.cpp
